Use .unshift instead of .push to sort med history with most recent at top. Fix MedForm TimePicker to work with Once Daily. Map over med schedule to show in med history.

--- a/src/components/HistoryCard/HistoryCard.scss
+++ b/src/components/HistoryCard/HistoryCard.scss
@@ -16,7 +16,14 @@
     }
 
     &__dates {
+        font-size: 1rem;
+        color: $secondary-color;
+        font-weight: 500;
         padding-bottom: 10px;
     }
 
+    &__content {
+        padding-bottom: 7px;
+
+    }
 }
