--- a/src/components/MedForm/MedForm.scss
+++ b/src/components/MedForm/MedForm.scss
@@ -27,16 +27,17 @@
 
     &__card {
         height: 2.8rem;
-        margin-top: 30px;
+        margin-top: 10px;
         background-color: $accent-color;
         border-radius: 10px;
-        padding: 15px 0 0 40px;
-        background-image: url('../../assets/images/right-chevron.svg');
-        background-repeat: no-repeat;
-        background-position: 90%;
+        padding: 15px 0 0 0;
+        // background-image: url('../../assets/images/right-chevron.svg');
+        // background-repeat: no-repeat;
+        // background-position: 90%;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
         text-decoration: none;
         color: $text-color;
+        text-align: center;
     }
 
 }
